--- a/notebook/generate_names.ipynb
+++ b/notebook/generate_names.ipynb
@@ -47,9 +47,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading and preprocessing data...\n",
+      "First 10 names: ['-maria carmen.', '-antonio.', '-maria.', '-manuel.', '-jose.']\n"
+     ]
+    }
+   ],
    "source": [
     "data_filepath = \"../data/nombres_raw.txt\"  # Replace with your actual file path\n",
     "alphabet = \"abcdefghijklmnopqrstuvwxyz \"\n",
@@ -65,9 +74,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Encoding names...\n",
+      "First 10 encoded names: [[1, 16, 4, 21, 12, 4, 3, 6, 4, 21, 16, 8, 17, 2], [1, 4, 17, 23, 18, 17, 12, 18, 2], [1, 16, 4, 21, 12, 4, 2], [1, 16, 4, 17, 24, 8, 15, 2], [1, 13, 18, 22, 8, 2]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize tokenizer\n",
     "tokenizer = CharTokenizer(alphabet, start_token=start_token, end_token=end_token)\n",
@@ -83,7 +101,8 @@
    "metadata": {},
    "source": [
     "- Use the ```CharTokenizer``` to encode your name. What is the result of encoding your name?\n",
-    ">>> Write your name\n",
+    ">>> Write your name: \n",
+    "MARIA\n",
     "\n",
     ">>> Write your name encoded"
    ]
@@ -434,7 +453,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
