--- a/notebook/generate_names.ipynb
+++ b/notebook/generate_names.ipynb
@@ -104,14 +104,47 @@
     ">>> Write your name: \n",
     "MARIA\n",
     "\n",
-    ">>> Write your name encoded"
+    ">>> Write your name encoded: [16, 4, 21, 12, 4]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[16, 4, 21, 12, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# MY NAME ENCODED\n",
+    "my_name = \"MARIA\"\n",
+    "my_name_lower = my_name.lower()\n",
+    "name_encoded = tokenizer.encode(my_name_lower)\n",
+    "print(name_encoded)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First item in batch:\n",
+      "Input: tensor([ 1, 16,  4, 21,  6, 18, 22,  3, 21, 24,  5,  8, 17,  0,  0,  0,  0,  0,\n",
+      "         0,  0])\n",
+      "Target: tensor([16,  4, 21,  6, 18, 22,  3, 21, 24,  5,  8, 17,  2,  0,  0,  0,  0,  0,\n",
+      "         0,  0])\n"
+     ]
+    }
+   ],
    "source": [
     "# Create dataset\n",
     "dataset = NameDataset(encoded_names)\n",
@@ -133,10 +166,30 @@
    "metadata": {},
    "source": [
     "- How can you obtain the target tensor from the input? Does this make sense for an autorregressive prediction such as the one of the Decoder-only model?\n",
-    ">>> Write your answer here\n",
+    ">>> Write your answer here \n",
+    "Encoded with tokens: [-, m, a, r, i, a, .], Input: [-, m, a, r, i, a], Target: [m, a, r, i, a, .]\n",
     "\n",
     "- What is the tensor value for the start token? And for the end token? And for the padding token?\n",
-    ">>> Write your answer here"
+    ">>> Start token: 1, End token: 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Start token: 1\n",
+      "End token: 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Start token:\", tokenizer.char2idx[\"-\"])\n",
+    "print(\"End token:\", tokenizer.char2idx[\".\"])"
    ]
   },
   {
@@ -149,9 +202,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initializing model...\n",
+      "Starting training...\n",
+      "Epoch [1/10], Training Loss: 2.4045\n",
+      "Epoch [1/10], Validation Loss: 2.1578\n",
+      "Epoch [2/10], Training Loss: 2.0712\n",
+      "Epoch [2/10], Validation Loss: 1.9938\n",
+      "Epoch [3/10], Training Loss: 1.9166\n",
+      "Epoch [3/10], Validation Loss: 1.8634\n",
+      "Epoch [4/10], Training Loss: 1.7989\n",
+      "Epoch [4/10], Validation Loss: 1.7613\n",
+      "Epoch [5/10], Training Loss: 1.7101\n",
+      "Epoch [5/10], Validation Loss: 1.6870\n",
+      "Epoch [6/10], Training Loss: 1.6423\n",
+      "Epoch [6/10], Validation Loss: 1.6326\n",
+      "Epoch [7/10], Training Loss: 1.5920\n",
+      "Epoch [7/10], Validation Loss: 1.5905\n",
+      "Epoch [8/10], Training Loss: 1.5505\n",
+      "Epoch [8/10], Validation Loss: 1.5512\n",
+      "Epoch [9/10], Training Loss: 1.5198\n",
+      "Epoch [9/10], Validation Loss: 1.5319\n",
+      "Epoch [10/10], Training Loss: 1.4919\n",
+      "Epoch [10/10], Validation Loss: 1.4976\n"
+     ]
+    }
+   ],
    "source": [
     "# Define training hyper parameters\n",
     "model_save_dir = \"runs\"\n",
