--- a/notebook/generate_names.ipynb
+++ b/notebook/generate_names.ipynb
@@ -168,14 +168,15 @@
     "- How can you obtain the target tensor from the input? Does this make sense for an autorregressive prediction such as the one of the Decoder-only model?\n",
     ">>> Write your answer here \n",
     "Encoded with tokens: [-, m, a, r, i, a, .], Input: [-, m, a, r, i, a], Target: [m, a, r, i, a, .]\n",
+    "We can obtain the target tensor directly from the input tensor, since the target is just the input shifted one step to the left. This makes sense, because in an autoregressive model, the training object is, at every time step, to predict the next token given all the previous ones.\n",
     "\n",
     "- What is the tensor value for the start token? And for the end token? And for the padding token?\n",
-    ">>> Start token: 1, End token: 2"
+    ">>> Start token: 1, End token: 2, Padding token: 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -183,13 +184,15 @@
      "output_type": "stream",
      "text": [
       "Start token: 1\n",
-      "End token: 2\n"
+      "End token: 2\n",
+      "Padding token: 0\n"
      ]
     }
    ],
    "source": [
     "print(\"Start token:\", tokenizer.char2idx[\"-\"])\n",
-    "print(\"End token:\", tokenizer.char2idx[\".\"])"
+    "print(\"End token:\", tokenizer.char2idx[\".\"])\n",
+    "print(\"Padding token:\", 0)"
    ]
   },
   {
@@ -284,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,41 +322,43 @@
     "    end_token_id = tokenizer.char2idx[end_token]\n",
     "\n",
     "    # TODO: Encode the prefix\n",
-    "    prefix_ids = None\n",
+    "    prefix_lower = prefix.lower()\n",
+    "    prefix_ids = [tokenizer.char2idx[char] for char in prefix if char in tokenizer.char2idx]\n",
     "\n",
     "    # TODO: Initialize the input with the start token and the prefix\n",
-    "    generated_ids = None\n",
+    "    generated_ids = torch.tensor([start_token_id] + prefix_ids, dtype=torch.long, device=device).unsqueeze(0)\n",
     "\n",
     "    with torch.no_grad():\n",
     "        for _ in range(max_length):\n",
     "            # TODO: Get model predictions\n",
-    "            logits = None\n",
+    "            logits = model(generated_ids)\n",
+    "            logits = logits[:,-1,:] / temperature\n",
     "            \n",
     "            # TODO: Apply softmax to get probabilities\n",
-    "            next_token_probs = None\n",
+    "            probs = F.softmax(logits, dim=1)\n",
     "\n",
     "            # TODO: Sample the next token\n",
-    "            next_token_id = None\n",
+    "            next_token_id = torch.multinomial(probs, num_samples=1)\n",
     "\n",
     "            # TODO: Append the new token to the sequence\n",
-    "            generated_ids = None\n",
+    "            generated_ids = torch.cat([generated_ids, next_token_id], dim=1)\n",
     "\n",
     "            # Stop if end token is generated\n",
     "            if next_token_id.item() == end_token_id:\n",
     "                break\n",
     "\n",
     "    # TODO: Decode the generated token IDs to a string, excluding start and end tokens\n",
-    "    generated_sequence = None\n",
+    "    generated_sequence = generated_ids.squeeze().tolist()\n",
     "\n",
     "    # TODO: Decode the name\n",
-    "    generated_name = None\n",
+    "    generated_name = tokenizer.decode([idx for idx in generated_sequence if idx not in [start_token_id, end_token_id]])\n",
     "\n",
     "    return generated_name\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,9 +372,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generated Names:\n",
+      "\n",
+      "sofia\n",
+      "juan lutuene\n",
+      "auperaz\n",
+      "supana eulia\n",
+      "brazyro mar\n"
+     ]
+    }
+   ],
    "source": [
     "# Generate names\n",
     "print(\"Generated Names:\\n\")\n",
@@ -456,9 +475,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generated Names with temperature=1.5:\n",
+      "\n",
+      "zahu\n",
+      "anatrees\n",
+      "luimo cksrinzet\n",
+      "kgrucyre\n",
+      "leog\n"
+     ]
+    }
+   ],
    "source": [
     "temperature = 1.5  # High randomness\n",
     "print(f\"Generated Names with temperature={temperature}:\\n\")\n",
@@ -477,9 +510,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generated Names with temperature=0.75:\n",
+      "\n",
+      "muriana\n",
+      "silvia gabriela\n",
+      "iona maria\n",
+      "adolisa\n",
+      "yashye\n"
+     ]
+    }
+   ],
    "source": [
     "temperature = 0.75  # Low randomness\n",
     "print(f\"Generated Names with temperature={temperature}:\\n\")\n",
@@ -498,9 +545,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "belina\n",
+      "miren josthe\n",
+      "pilar\n",
+      "felidia\n",
+      "henrinafeldis\n"
+     ]
+    }
+   ],
    "source": [
     "temperature = 1.0  # Default randomness\n",
     "prefix = \"Z\"  # Prefix to start the names with\n",
